fix ui dark mode

--- a/src/pages/Wallet/Dashboard/DelegatedValidators/stype.css
+++ b/src/pages/Wallet/Dashboard/DelegatedValidators/stype.css
@@ -1,5 +1,5 @@
 .undelegate-note {
-    color: var(--hyperlink-color);
+    color: white;
     margin-top: 5px;
     font-size: 13px;
 }
